--- a/beta.html
+++ b/beta.html
@@ -516,7 +516,7 @@
                                 </form>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row" style="display: none;">
                             <div class="col-lg-6">
                                 <div class="divBack form-inline">
                                     <div style=" transform: rotate(180deg);margin-right: 10px;">&#x27A4;</div>
