--- a/beta.html
+++ b/beta.html
@@ -669,10 +669,8 @@
     <div class="container-fluid conMainFooter">
         <div class="container conFooter">
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                <div class="col-lg-12 form-inline">
                     <button class="btnBackFooter">Back</button>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-6">
                     <button class="btnNextFooter">Next</button>
                 </div>
             </div>
@@ -1058,6 +1056,7 @@
             back = 3;
             $(".divLine2").css("background-color", "#00C853");
             $(".p3").css("background-color", "#00C853");
+
         }
     });
 
