--- a/beta.html
+++ b/beta.html
@@ -21,7 +21,7 @@
 <body>
     <div class="container-fluid conNav">
         <nav class="navbar navbar-expand-md navbar-light sticky-top">
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse">
+            <button class="navbar-toggler" data-toggle="collapse" data-target="collapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <nav class="navbar-brand" href="#">
