--- a/beta.html
+++ b/beta.html
@@ -436,7 +436,7 @@
                             </label>
                             <input id="imgInp" type="file" style="display: none;" onchange="readURL(this.value)" />
                         </div>
-                        <p class="pClick">Click the image to change the picture</p>
+                        <p class="pClick" style="display: none;">Click the image to change the picture</p>
                         <div class="row" style="width: 100%;padding: 0px;margin-top: 25px;">
                             <div class="col-lg-4">
                                 <form>
