--- a/beta.html
+++ b/beta.html
@@ -112,7 +112,7 @@
                     <p class=" pCreate">Choose a variant</p>
                     <p class="pPlease">Get the benefits you need at the price you want with our 6 SUREHEALTH card.</p>
                     <hr>
-                    <div class="owl-carousel">
+                    <div class="owl-carousel owl-theme">
                         <div class="divCarousel">
                             <div class="divVariant divActive divVariantClassic">
                                 <img src="Image/tick.png" class="imgTick" style="width: 16px;display: none;">
@@ -959,7 +959,8 @@
         responsiveClass: true,
         responsive: {
             0: {
-                items: 2
+                items: 2,
+                nav: true
             },
             600: {
                 items: 3
