--- a/beta.html
+++ b/beta.html
@@ -21,7 +21,7 @@
 
 <body>
     <div class="container-fluid conNav">
-        <nav class="navbar navbar-expand-md navbar-light sticky-top">
+        <nav class="navbar navbar-expand-md navbar-light sticky-top" style="z-index: 99999999999;">
             <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -710,162 +710,7 @@
     });
 
 
-    function validatePassword(password) {
-
-        if (password.length === 0) {
-            document.getElementById("msg").innerHTML = "";
-            document.getElementById("msg").style.marginBottom = "0px";
-            document.getElementById("prog").style.width = "0%";
-            return;
-        }
-        else {
-            document.getElementById("msg").style.marginBottom = "14px";
-        }
-
-        var matchedCase = new Array();
-        matchedCase.push("[$@$!%*#?&]");
-        matchedCase.push("[A-Z]");
-        matchedCase.push("[0-9]");
-        matchedCase.push("[a-z]");
-
-        var ctr = 0;
-        for (var i = 0; i < matchedCase.length; i++) {
-            if (new RegExp(matchedCase[i]).test(password)) {
-                ctr++;
-            }
-        }
-
-        var color = "";
-        var strength = "";
-        switch (ctr) {
-            case 0:
-            case 1:
-            case 2:
-                strength = "Very Weak";
-                color = "red";
-                break;
-            case 3:
-                strength = "Medium";
-                color = "orange";
-                break;
-            case 4:
-                strength = "Strong";
-                color = "green";
-                break;
-        }
-        document.getElementById("msg").innerHTML = strength;
-        document.getElementById("msg").style.color = color;
-
-
-        if (strength === "Very Weak") {
-            document.getElementById("prog").style.width = "10%";
-            document.getElementById("prog").style.backgroundColor = "red";
-        }
-        else if (strength === "Medium") {
-            document.getElementById("prog").style.width = "25%";
-            document.getElementById("prog").style.backgroundColor = "orange";
-        }
-        else if (strength === "Strong") {
-            document.getElementById("prog").style.width = "46%";
-            document.getElementById("prog").style.backgroundColor = "green";
-        }
-    }
-
-    $(".btnCreate").click(function () {
-        const element = document.querySelector('.divCreate')
-        element.classList.add('animated', 'fadeOut');
-        $(".divStep1").removeClass("divBoxActive");
-        $(".divStep2").addClass("divBoxActive");
-        $(".divCreate").css("display", "none");
-        $(".divCreate").removeClass("animated");
-        $(".divCreate").removeClass("fadeOut");
-        $(".divMembership").css("display", "block");
-        const element1 = document.querySelector('.divMembership')
-        element1.classList.add('animated', 'fadeIn');
-    });
-
-    $(".btnBack1").click(function () {
-        const element = document.querySelector('.divMembership')
-        element.classList.add('animated', 'fadeOut');
-        $(".divMembership").css("display", "none");
-        $(".divMembership").removeClass("animated");
-        $(".divMembership").removeClass("fadeOut");
-        $(".divStep2").removeClass("divBoxActive");
-        $(".divStep1").addClass("divBoxActive");
-        const element1 = document.querySelector('.divCreate')
-        element1.classList.add('animated', 'fadeIn');
-        $(".divCreate").css("display", "block");
-    });
-
-    $(".divNext").click(function () {
-        const element = document.querySelector('.divPersonalInfo')
-        element.classList.add('animated', 'fadeOut');
-        $(".divPersonalInfo").css("display", "none");
-        $(".divPersonalInfo").removeClass("animated");
-        $(".divPersonalInfo").removeClass("fadeOut");
-        $(".divAddress").css("display", "block");
-        const element1 = document.querySelector('.divAddress')
-        element1.classList.add('animated', 'fadeIn');
-    });
-
-    $(".divBack").click(function () {
-        const element = document.querySelector('.divAddress')
-        element.classList.add('animated', 'fadeOut');
-        $(".divAddress").css("display", "none");
-        $(".divAddress").removeClass("animated");
-        $(".divAddress").removeClass("fadeOut");
-        const element1 = document.querySelector('.divPersonalInfo')
-        element1.classList.add('animated', 'fadeIn');
-        $(".divPersonalInfo").css("display", "block");
-    });
-
-
-    $(".btnSubmit").click(function () {
-        const element = document.querySelector('.divMembership')
-        element.classList.add('animated', 'fadeOut');
-        $(".divMembership").css("display", "none");
-        $(".divMembership").removeClass("animated");
-        $(".divMembership").removeClass("fadeOut");
-        $(".divStep2").removeClass("divBoxActive");
-        $(".divStep3").addClass("divBoxActive");
-        const element1 = document.querySelector('.divOverview')
-        element1.classList.add('animated', 'fadeIn');
-        $(".divOverview").css("display", "block");
-        $(".imgOverview").attr("src", $(".imgProf").attr('src'));
-        newText = $('.txtfirstname').val() + ' ' + $('.txtmiddle').val() + ' ' + $('.txtlast').val();
-        $('.pFullName').text(newText);
-        $('.pEmail').text($('.txtEmail').val());
-        $('.pPhone').text($('.txtPhone').val());
-        $('.pMobile').text($('.txtMobile').val());
-        $('.pVariant').text(data);
-        $('.pPrice').text(price);
-        $('.pBday').text($('.bday').val());
-        $('.pAddress').text($('.txtAddress').val());
-    });
-
-    $(".btnBack").click(function () {
-        const element = document.querySelector('.divOverview')
-        element.classList.add('animated', 'fadeOut');
-        $(".divOverview").css("display", "none");
-        $(".divOverview").removeClass("animated");
-        $(".divOverview").removeClass("fadeOut");
-        const element1 = document.querySelector('.divMembership')
-        element1.classList.add('animated', 'fadeIn');
-        $(".divMembership").css("display", "block");
-    });
-
-    $(".btnBack2").click(function () {
-        const element = document.querySelector('.divOverview')
-        element.classList.add('animated', 'fadeOut');
-        $(".divOverview").css("display", "none");
-        $(".divOverview").removeClass("animated");
-        $(".divOverview").removeClass("fadeOut");
-        $(".divStep3").removeClass("divBoxActive");
-        $(".divStep2").addClass("divBoxActive");
-        const element1 = document.querySelector('.divMembership')
-        element1.classList.add('animated', 'fadeIn');
-        $(".divMembership").css("display", "block");
-    });
+    
     var variant;
     var price;
 
@@ -963,11 +808,13 @@
                 nav: true
             },
             600: {
-                items: 3
+                items: 3,
+                nav: true
             },
             1000: {
                 items: 3,
-                loop: false
+                loop: false,
+                nav: true
             }
         }
     })
