--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         crossorigin=""></script>
     <link rel="icon" type="image/png" href="Image/titlelogo.png">
     <link rel="apple-touch-icon" type="image/png" href="/icon.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet"> 
     <title>Surehealth - Service by Aventus</title>
 </head>
 
@@ -187,7 +188,7 @@
                                 style="width:55px;">
                             <div class="card-body">
                                 <h5 class="card-title text-center"
-                                    style="font-family: Muli;font-weight: bold;color: #424242">Classic</h5>
+                                    style="font-family: Roboto;font-weight: bold;color: #424242">Classic</h5>
                                 <p class="text-center pprice">&#8369;600</p>
                                 <hr class="hrfooter"
                                     style="background-color: #E0E0E0;margin-top:10px;width:90%;margin-bottom: 20px;">
