--- a/beta.html
+++ b/beta.html
@@ -524,7 +524,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-4 col-4">
                                 <form>
-                                    <input required='' type='text'>
+                                    <input required='' type='text' class="txtzip">
                                     <label alt='Zip Code' placeholder='Zip Code'></label>
                                 </form>
                             </div>
@@ -549,6 +549,48 @@
                                     <input required='' type='text' class="txtEmail">
                                     <label alt='Email' placeholder='Email'></label>
                                 </form>
+                            </div>
+                        </div>
+                        <p class = "pCreate">Credit/Debit Card Details</p>
+                        <hr>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <form>
+                                    <input required='' type='text' class="cardNumber">
+                                    <label alt='Card Number' placeholder='Card Number'></label>
+                                </form>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4 col-sm-4 col-4">
+                                <form>
+                                    <input required='' type='text' maxLength="2" class="cardMM">
+                                    <label alt='MM' placeholder='MM'></label>
+                                </form>
+                            </div>
+                            <div class="col-lg-4 col-sm-4 col-4">
+                                <form>
+                                    <input required='' type='text' maxLength="2" class="cardYY">
+                                    <label alt='YY' placeholder='YY'></label>
+                                </form>
+                            </div>
+                            <div class="col-lg-4 col-sm-4 col-4">
+                                <form>
+                                    <input required='' type='password' maxLength="3" class="cardCVC">
+                                    <label alt='CVC' placeholder='CVC'></label>
+                                </form>
+                            </div>
+                        </div>
+                        <div class="row" style="display: none;">
+                            <div class="col-lg-6">
+                                <div class="divBack form-inline">
+                                    <div style=" transform: rotate(180deg);margin-right: 10px;">&#x27A4;</div>
+                                    <p class="pNext" style="text-align: left !important;margin-top: 15px;">Back 1/2
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <button class="btnSubmit" style="margin-top: -2px;">Submit / Next</button>
                             </div>
                         </div>
                         <div class="row" style="display: none;">
@@ -656,7 +698,7 @@
 
                     <div class="row" style="display: none;">
                         <div class="col-lg-6">
-                            <button class="btnBack2">Back</button>
+                            <button class="btnBack2">Backs</button>
                         </div>
                         <div class="col-lg-6">
                             <button class="btnPayment">Payments</button>
